# my_dagster_dbt

./: dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.py  workspace.yaml
.github/workflows/: branch_deployments.yml  deploy.yml
src/dagster_and_dbt/defs/: jobs.py  project.py  resources.py
src/dagster_and_dbt/defs/assets/: dbt.py  metrics.py
